--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://i.ibb.co/HrVcxj2/Logo.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>iAvengers Toys</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
